<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mega Board Controller</string>
    <string name="action_settings">Settings</string>
    <string name="btnExitYa">Ya</string>
    <string name="btnExitTidak">Tidak</string>
    <string name="tvExit">Apakah Anda akan keluar dari aplikasi ini ?</string>
    
    <!-- UI -->
    <string name="tvServo">ARM</string>
    <string name="tvServo2">Gripper</string>
    <string name="btnLampu_1">Lampu 1</string>
    <string name="btnLampu_2">Lampu 2</string>
    <string name="btnLampu_3">Lampu 3</string>
    
</resources>
