<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Main" >
    
    <TextView
        android:id="@+id/tvServo"
        android:text="@string/tvServo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <SeekBar 
        android:id="@+id/seekServo"
        android:max="179"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:paddingTop="20dp"
        android:id="@+id/tvServo2"
        android:text="@string/tvServo2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <SeekBar 
        android:id="@+id/seekServo2"
        android:max="179"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:paddingTop="20dp"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        	<TextView
		        android:text="@string/btnLampu_1"
	            android:layout_height="wrap_content"  
	            android:layout_width="150dp"/>
        	<TextView
		        android:text="@string/btnLampu_2"
	            android:layout_height="wrap_content"  
	            android:layout_width="150dp"/>
        	<TextView
		        android:text="@string/btnLampu_3"
	            android:layout_height="wrap_content"  
	            android:layout_width="150dp"/>
    </LinearLayout>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
        	<ToggleButton
		        android:id="@+id/btnLampu_1"
	            android:layout_height="wrap_content"  
	            android:layout_width="150dp"/>
        	<ToggleButton
		        android:id="@+id/btnLampu_2"
	            android:layout_height="wrap_content"  
	            android:layout_width="150dp" />
        	<ToggleButton
		        android:id="@+id/btnLampu_3"
	            android:layout_height="wrap_content"  
	            android:layout_width="150dp"/>
    </LinearLayout>
    
    

</LinearLayout>
